--- a/templates/blog/blog_list.html
+++ b/templates/blog/blog_list.html
@@ -74,51 +74,48 @@
         <h5 class="aw card-header">Search</h5>
         <div class="card-body">
             <div class="input-group">
-                <form method="GET" action="{% url 'blog:blog_search' %}">
-                    <input type="text" class="form-control" name="s" placeholder="Search for...">
-                    <span class="input-group-append">
-                        <button class="aw  btn btn-secondary" type="submit">Go!</button>
-                    </span>
+                <form method="GET" action="{% url 'blog:list' %}" class="form-inline my-2 my-lg-0">
+                    <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
+                        aria-label="Search">
+                    <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
                 </form>
             </div>
         </div>
-    </div>
 
-    <!-- Categories Widget -->
-    <div class="card my-4">
-        <h5 class="aw card-header">Categories</h5>
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-6">
-                    <ul class="list-unstyled mb-0">
-                        {% for item in category_menu %}
-                        <a class="dropdown-item aw" href="{% url 'blog:category' item %}">{{ item }}</a>
-                        {% endfor %}
+        <!-- Categories Widget -->
+        <div class="card my-4">
+            <h5 class="aw card-header bg-black-a">Categories</h5>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <ul class="list-unstyled mb-0">
+                            {% for item in category_menu %}
+                            <a class="dropdown-item aw" href="{% url 'blog:category' item %}">{{ item }}</a>
+                            {% endfor %}
+                        </ul>
+                    </div>
 
-                    </ul>
                 </div>
-
             </div>
         </div>
-    </div>
-    <!-- Side Widget -->
-    <div class="card my-4 ">
-        <h5 class="aw card-header text-bk text-center">All Blogs</h5>
-        {% for blog in all_blogs %}
-        {% if blog.featured != True %}
-        <div class="card-body ">
-            <a class="text-bk" href="{{ blog.get_absolute_url }}">
-                <h5 class="aw text-center ">{{ blog.title|title }}</h5>
-                <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
-                        {{ blog.category }}</small></a>
-                <p class="text-bk">{{ blog.content|safe|truncatechars:50 }}</p>
-            </a>
+        <!-- Side Widget -->
+        <div class="card my-4 ">
+            <h5 class="aw card-header text-bk text-center">All Blogs</h5>
+            {% for blog in all_blogs %}
+            {% if blog.featured != True %}
+            <div class="card-body ">
+                <a class="text-bk" href="{{ blog.get_absolute_url }}">
+                    <h5 class="aw text-center ">{{ blog.title|title }}</h5>
+                    <a href="{% url 'blog:category' blog.category %}"><small class="text-muted">Category:
+                            {{ blog.category }}</small></a>
+                    <p class="text-bk">{{ blog.content|safe|truncatechars:50 }}</p>
+                </a>
+            </div>
+            <hr>
+            {% endif %}
+            {% endfor %}
         </div>
-        <hr>
-        {% endif %}
-        {% endfor %}
     </div>
-</div>
 
 
 
