--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -127,7 +127,7 @@
         <h4 class="aw text-center mb-5">Look your Best. Feel even Better</h4>
     </div>
 
-    <div class="row ">
+    <div class="row row justify-content-center ">
         {% for items in sale_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
@@ -136,7 +136,7 @@
                         alt="{{ items.name }}">
                 </a>
                 <div class="card-body pb-0">
-                    <p class="aw text-center">{{ items.name }}</p>
+                    <p class="text-center">{{ items.name }}</p>
                 </div>
                 <div class="card-footer bg-white pt-0 border-0 text-center">
                     <div class="row ">
