--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -3,8 +3,8 @@
 
 <div class="container-fluid bg-black">
     <div class="row ">
-        <div class="col-md-12 mb-0  text-right">
-            <div id="mini_cart" class="mr-md-4">
+        <div class="col-12">
+            <div id="mini_cart">
 
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_staff %}
@@ -29,9 +29,9 @@
 
                 </span>
                 <a class="aw text-wht" href="{% url 'account_login' %}" title="User Login">
-                    &nbsp;Login</a>
+                    Login</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
-                <a class="aw text-wht" href="{% url 'account_signup' %}" title="Registration Form"> &nbsp;Sign up</a>
+                <a class="aw text-wht" href="{% url 'account_signup' %}" title="Registration Form">Sign up</a>
 
                 {% endif %}
 
