--- a/templates/base_partials/_navbar.html
+++ b/templates/base_partials/_navbar.html
@@ -1,14 +1,5 @@
 {% load static %}
-
-
-
-
-
-
-
-
-
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="pt-2 navbar navbar-expand-lg navbar-dark fixed-top">
     <a href="{% url 'home' %}" class="nav-link main-logo-link">
         <img id="design2" src="{% static 'images/logo.png' %}" alt="Logo" />
     </a>
