--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -18,10 +18,15 @@
         <div class="overlay">
             <div class="col p-4">
                 <p class="text-wht aw display-3 text-center">Focus Fitness</p>
-                <p class="text-wht">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quasi nobis
-                    autem, accusamus
-                    quo cupiditate temporibus, mollitia maxime, odit illo architecto aliquid obcaecati inventore.
-                    Nulla excepturi commodi provident sunt est.</p>
+                <h1 class="aw font-lrg"><span class="aw font-lrg mr-1 text-primary">Don't</span><span
+                        class="aw font-lrg m-1 text-warning">Just</span><span
+                        class="aw font-lrg m-1 text-red">Live.</span><span
+                        class="aw font-lrg m-1 text-success">Thrive!</span>
+                </h1>
+                <p class="text-wht">We are <span class="aw font-lrg"> Focus Fitness.com.</span> Your transformation is
+                    our passion. We are your trainer,
+                    younutritionist, your supplment expert, your lifting partner, your support group. We privide the
+                    technology, tools, and products you need to burn fat, build muscle, and become your best self. </p>
             </div>
 
         </div>
