--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -162,7 +162,7 @@
         {% for product in display_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
-                <a class="ripple-surface back-up-img mx-auto" href="{% url 'products:product_detail' product.id %}">
+                <a class="ripple-surface   mx-auto" href="{% url 'products:product_detail' product.id %}">
                     <img class="mx-auto card-img-top shop-card-top-img img-fluid" src="{{ product.image.url }}"
                         alt="{{ product.name }}">
                 </a>
